--- a/notebooks/quantized_recurrent.ipynb
+++ b/notebooks/quantized_recurrent.ipynb
@@ -35,7 +35,7 @@
        "            hidden_size: int,\n",
        "            num_layers: int = 1,\n",
        "            nonlinearity: str = 'tanh',\n",
-       "            bias: bool = True,\n",
+       "            bias: Optional[bool] = True,\n",
        "            batch_first: bool = False,\n",
        "            bidirectional: bool = False,\n",
        "            weight_quant=Int8WeightPerTensorFloat,\n",
@@ -83,6 +83,11 @@
     "import torch\n",
     "torch.manual_seed(0)\n",
     "\n",
+    "# helpers\n",
+    "def assert_with_message(condition):\n",
+    "    assert condition\n",
+    "    print(condition)\n",
+    "\n",
     "def pretty_print_source(source):\n",
     "    display(Markdown('```python\\n' + source + '\\n```'))\n",
     "    \n",
@@ -111,7 +116,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
       "  warn('Keyword arguments are being passed but they not being used.')\n"
      ]
     }
@@ -141,18 +146,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
-    "quant_rnn_0_left_to_right.gate_params.input_weight.weight_quant is quant_rnn_1_right_to_left.gate_params.input_weight.weight_quant"
+    "assert_with_message(not quant_rnn_0_left_to_right.gate_params.input_weight.weight_quant is quant_rnn_1_right_to_left.gate_params.input_weight.weight_quant)"
    ]
   },
   {
@@ -161,18 +163,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
-    "quant_rnn_0_left_to_right.cell.gate_acc_quant is quant_rnn_1_right_to_left.cell.gate_acc_quant"
+    "assert_with_message(not quant_rnn_0_left_to_right.cell.gate_acc_quant is quant_rnn_1_right_to_left.cell.gate_acc_quant)"
    ]
   },
   {
@@ -181,18 +180,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
-    "quant_rnn_0_left_to_right.gate_params.bias_quant is quant_rnn_1_right_to_left.gate_params.bias_quant"
+    "assert_with_message(not quant_rnn_0_left_to_right.gate_params.bias_quant is quant_rnn_1_right_to_left.gate_params.bias_quant)"
    ]
   },
   {
@@ -209,18 +205,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
-    "quant_rnn_0_left_to_right.io_quant is quant_rnn_1_right_to_left.io_quant"
+    "assert_with_message(quant_rnn_0_left_to_right.io_quant is quant_rnn_1_right_to_left.io_quant)"
    ]
   },
   {
@@ -391,9 +384,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/quant_tensor/__init__.py:84: UserWarning: Empty QuantTensor are deprecated and will be removed in a future version\n",
-      "  warnings.warn(\n",
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/nn/mixin/base.py:320: UserWarning: Defining your `__torch_function__` as a plain method is deprecated and will be an error in future, please define it as a classmethod. (Triggered internally at /opt/conda/conda-bld/pytorch_1695392026823/work/torch/csrc/utils/python_arg_parser.cpp:368.)\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:307: UserWarning: Defining your `__torch_function__` as a plain method is deprecated and will be an error in future, please define it as a classmethod. (Triggered internally at /opt/conda/conda-bld/pytorch_1699449183005/work/torch/csrc/utils/python_arg_parser.cpp:368.)\n",
       "  return torch.cat(outputs, dim=seq_dim)\n"
      ]
     },
@@ -471,7 +462,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/miniconda3/envs/torch_2.1/lib/python3.11/site-packages/torch/_tensor.py:1362: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at /opt/conda/conda-bld/pytorch_1695392026823/work/c10/core/TensorImpl.h:1900.)\n",
+      "/scratch/fabian/miniforge3/envs/torchgpu/lib/python3.11/site-packages/torch/_tensor.py:1362: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at /opt/conda/conda-bld/pytorch_1699449183005/work/c10/core/TensorImpl.h:1900.)\n",
       "  return super().rename(names)\n"
      ]
     },
@@ -645,7 +636,16 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.nn import RNN\n",
     "from brevitas.nn import QuantRNN\n",
@@ -664,9 +664,9 @@
     "# Generate random input\n",
     "inp = torch.randn(5, 2, 10)\n",
     "# Check outputs are the same\n",
-    "assert torch.allclose(quant_rnn(inp)[0], float_rnn(inp)[0], atol=ATOL)\n",
+    "assert_with_message(torch.allclose(quant_rnn(inp)[0], float_rnn(inp)[0], atol=ATOL))\n",
     "# Check hidden states are the same\n",
-    "assert torch.allclose(quant_rnn(inp)[1], float_rnn(inp)[1], atol=ATOL)"
+    "assert_with_message(torch.allclose(quant_rnn(inp)[1], float_rnn(inp)[1], atol=ATOL))"
    ]
   },
   {
@@ -765,7 +765,7 @@
        "            input_size: int,\n",
        "            hidden_size: int,\n",
        "            num_layers: int = 1,\n",
-       "            bias: bool = True,\n",
+       "            bias: Optional[bool] = True,\n",
        "            batch_first: bool = False,\n",
        "            bidirectional: bool = False,\n",
        "            weight_quant=Int8WeightPerTensorFloat,\n",
@@ -811,6 +811,8 @@
        "            **kwargs)\n",
        "        if cat_output_cell_states and cell_state_quant is not None and not shared_cell_state_quant:\n",
        "            raise RuntimeError(\"Concatenating cell states requires shared cell quantizers.\")\n",
+       "        if return_quant_tensor and cell_state_quant is None:\n",
+       "            raise RuntimeError(\"return_quant_tensor=True requires cell_state_quant != None.\")\n",
        "        self.cat_output_cell_states = cat_output_cell_states\n",
        "\n",
        "```"
@@ -912,16 +914,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/giuseppe/miniconda3/envs/torch_2.1/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from brevitas.nn import QuantLSTM\n",
@@ -963,7 +956,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f32df21d190>"
+       "<IPython.lib.display.IFrame at 0x7faa79c37310>"
       ]
      },
      "execution_count": 19,
@@ -992,7 +985,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-02 10:22:46.461627098 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_93 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
+      "2024-02-28 05:30:11.212034979 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_93 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
      ]
     }
    ],
@@ -1039,7 +1032,37 @@
      "skip-execution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Serving 'quant_lstm_weight_only_cifg_4b.onnx' at http://localhost:8082\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"400\"\n",
+       "            src=\"http://localhost:8082/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7faa7ad26650>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_netron(export_path, 8082)"
    ]
@@ -1061,7 +1084,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-02 10:22:49.697482752 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_87 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
+      "2024-02-28 05:30:18.857576114 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_87 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
      ]
     }
    ],
@@ -1092,7 +1115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
       "  warn('Keyword arguments are being passed but they not being used.')\n"
      ]
     }
@@ -1117,7 +1140,37 @@
      "skip-execution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Serving 'quant_lstm_weight_only_bidirectional_2_layers.onnx' at http://localhost:8083\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"400\"\n",
+       "            src=\"http://localhost:8083/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7faab66e2150>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_netron(export_path, 8083)"
    ]
@@ -1138,7 +1191,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
       "  warn('Keyword arguments are being passed but they not being used.')\n"
      ]
     }
@@ -1163,7 +1216,37 @@
      "skip-execution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Serving 'quant_lstm_weight_only_bidirectional_2_layers_shared_ih.onnx' at http://localhost:8085\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"400\"\n",
+       "            src=\"http://localhost:8085/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7faba0549390>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_netron(export_path, 8085)"
    ]
@@ -1185,7 +1268,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
       "  warn('Keyword arguments are being passed but they not being used.')\n"
      ]
     }
@@ -1233,7 +1316,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f32dd765bd0>"
+       "<IPython.lib.display.IFrame at 0x7faa79c34710>"
       ]
      },
      "execution_count": 29,
@@ -1262,7 +1345,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
       "  warn('Keyword arguments are being passed but they not being used.')\n"
      ]
     }
@@ -1311,7 +1394,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f32df217b90>"
+       "<IPython.lib.display.IFrame at 0x7faa78c8acd0>"
       ]
      },
      "execution_count": 31,
@@ -1389,7 +1472,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f32dd2f7c10>"
+       "<IPython.lib.display.IFrame at 0x7faa78ab76d0>"
       ]
      },
      "execution_count": 33,
@@ -1469,7 +1552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_latest",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1485,7 +1568,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "c90b4b2913cf255302969887b74954c34035fee81e7901b217735b8a389ceb78"
@@ -1493,5 +1575,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
