--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -2142,85 +2142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The custom format shown above can integrated into ONNX-based toolchains, e.g. it's supported by our own FINN toolchain for low-precision dataflow style custom FPGAs implementations, and would be a starting point for direct integration with TVM.\n",
-    "\n",
-    "## Export to TorchScript quantization backend\n",
-    "\n",
-    "It's also possible to export to TorchScript own quantized functional operators, which come with their own set of restrictions. In particular, weights should be 7b and unsigned, which requires a zero-point. We can model that with appropriate quantizers:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from brevitas.quant import ShiftedUint8ActPerTensorFloat\n",
-    "from brevitas.export import export_torch_qop\n",
-    "\n",
-    "\n",
-    "quant_conv_8b7b = QuantConv1d(\n",
-    "    2, 4, 3, bias=True,\n",
-    "    input_quant=ShiftedUint8ActPerTensorFloat,\n",
-    "    output_quant=ShiftedUint8ActPerTensorFloat,\n",
-    "    weight_bit_width=7,\n",
-    "    bias_quant=Int16Bias)\n",
-    "\n",
-    "output_path = 'pytorch_qf_conv_8b7b.pt'\n",
-    "exported_model = export_torch_qop(quant_conv_8b7b, input_t=float_inp, export_path=output_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "tags": [
-     "skip-execution"
-    ]
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Serving 'pytorch_qf_conv_8b7b.pt' at http://localhost:8085\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"400\"\n",
-       "            src=\"http://localhost:8085/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f92ca4a9550>"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "show_netron(output_path, 8085)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As we can see though information on the fact that activations are 7b is lost, and they simply marked as 8b.\n",
-    "\n",
-    "Additionally, because bias quantization is not represented explicitly (although it is performed implicitly at 32b at runtime in the backend), any information around that is lost.\n",
-    "As with standard ONNX, representing precisions below 8b is not possible."
+    "The custom format shown above can integrated into ONNX-based toolchains, e.g. it's supported by our own FINN toolchain for low-precision dataflow style custom FPGAs implementations, and would be a starting point for direct integration with TVM."
    ]
   },
   {
